// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render with name 1`] = `
<Icon
  className=""
  inText={false}
  name="fire"
  title={null}
>
  <span
    className="fa fa-fire"
    title={null}
  />
</Icon>
`;

exports[`Icon should render with name and className 1`] = `
<Icon
  className="some-class"
  inText={false}
  name="fire"
  title={null}
>
  <span
    className="some-class fa fa-fire"
    title={null}
  />
</Icon>
`;

exports[`Icon should render with name and inText 1`] = `
<Icon
  className=""
  inText={true}
  name="fire"
  title={null}
>
  <span
    className="fa fa-fire icon_in-text"
    title={null}
  />
</Icon>
`;

exports[`Icon should render with name and title 1`] = `
<Icon
  className=""
  inText={false}
  name="fire"
  title="Fire"
>
  <span
    className="fa fa-fire"
    title="Fire"
  />
</Icon>
`;
